<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- main -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <!-- login -->
    <string name="app_name">VsFootball</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_title">Vs.Football</string>
    <string name="login_btn_facebook">Log in with Facebook</string>
    <string name="login_tv_facebook_1">Use Facebook signin to</string>
    <string name="login_tv_facebook_2">challenge your friends today!</string>
    <string name="login_or">Or</string>
    <string name="login_with">Login with Vs.Football signon</string>
    <string name="login_create">Create a free account now!</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_remember">Remember password</string>
    <string name="login_login">Log in</string>
    <string name="login_forgot">Forgot password?</string>
    <string name="login_input_username_null">Username missing</string>
    <string name="login_input_password_null">Password missing</string>
    <string name="input_username_error">Username is illegal</string>
    <string name="login_failed">Login Failed</string>
    <!-- regist -->
    <string name="regist_tip">your account info:</string>
    <string name="regist_describe">Next,check your email and click \n the link to verify your account,\n then you\'re ready to play!</string>
    <string name="regist_email">Email</string>
    <string name="regist_password">Password</string>
    <string name="regist_confirm">Password Confirm</string>
    <string name="regist_firstname">First Name</string>
    <string name="regist_lastname">Last Name</string>
    <string name="regist_signup">Sign Up</string>
    <string name="regist_cancel">Cancel</string>
    <string name="register_input_password_null">Password missing</string>
    <string name="password_not_match">Yours passwords do not match</string>
    <string name="register_input_firstname_null">First name missing</string>
    <string name="register_input_lastname_null">Last name missing</string>
    <string name="register_input_email_null">Email missing</string>
    <string name="register_input_email_error">Email format is not correct</string>
    <string name="process_login">Processing Login</string>
    <string name="processing">Processing</string>
    <string name="signup_failed">Signup Failed</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_forget_password">ForgetPasswordActivity</string>
    <!-- password recovery -->
    <string name="forget_email">E-mail:</string>
    <string name="forget_question">Forgot Your Password?</string>
    <string name="forget_discribe_1">Just enter your email and</string>
    <string name="forget_discribe_2">we\'ll send you an email to</string>
    <string name="forget_discribe_3">reset it.</string>
    <string name="forget_input_email">Email address</string>
    <string name="forget_submit">Submit</string>
    <string name="forget_cancel">Camcel</string>
    <string name="process_sending">Sending...</string>
    <string name="title_activity_splash">SplashActivity</string>

</resources>