<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/ll_regist"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/et_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/regist_email"
            android:inputType="textEmailAddress"
            android:maxLength="100"
            android:singleLine="true" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/regist_password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:singleLine="true" />

        <EditText
            android:id="@+id/et_confirm"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/regist_confirm"
            android:inputType="textPassword"
            android:maxLength="20"
            android:singleLine="true" />

        <EditText
            android:id="@+id/et_firstname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/regist_firstname"
            android:maxLength="50"
            android:singleLine="true" />

        <EditText
            android:id="@+id/et_lastname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/regist_lastname"
            android:maxLength="50"
            android:singleLine="true" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_regist"
        android:layout_centerHorizontal="true"
        android:text="@string/regist_join_us" />

</RelativeLayout>